<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tv_login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/marginEdge"
            android:background="?attr/btnBackground"
            android:text="@string/login"
            android:textColor="?attr/textColor"/>

        <Button
            android:id="@+id/btn_login_retry"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_phone"
            android:text="@string/retry"
            android:visibility="invisible"/>

        <ProgressBar
            android:id="@+id/pb_login_status"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignTop="@id/tv_login_status"
            android:layout_toRightOf="@id/tv_phone"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_flux_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/flux_status"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_refresh_flux"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonHeight"
                android:enabled="false"
                android:text="@string/refresh"/>

            <ProgressBar
                android:id="@+id/pb_refresh_flux"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/pb_flux"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"/>

        <TextView
            android:id="@+id/tv_flux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:minWidth="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_welfare_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxEms="18"
            android:text="@string/envelope_status"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_refresh_welfare"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/refresh"/>

            <ProgressBar
                android:id="@+id/pb_refresh_welfare"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_next_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge"
        android:text="@string/next_round_time"/>

    <TextView
        android:id="@+id/tv_welfare_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge"
        android:text="@string/type"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_grab"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginEdge"
            android:background="?attr/btnBackground"
            android:enabled="false"
            android:text="@string/grab"
            android:textColor="?attr/textColor"/>

        <Button
            android:id="@+id/btn_welfare_record"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginEdge"
            android:background="?attr/btnBackground"
            android:enabled="false"
            android:padding="0dp"
            android:text="@string/history"
            android:textColor="?attr/textColor"/>

        <Button
            android:id="@+id/btn_auto_grab_welfare"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginEdge"
            android:background="?attr/btnBackground"
            android:padding="0dp"
            android:text="@string/auto_grab_envelope"
            android:textColor="?attr/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEdge"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_welfare_service_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ProgressBar
            android:id="@+id/pb_welfare_service_status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>

